<resources>
    <string name="app_name">YueShiJiaGroup</string>
    <string name="not_logged_text">立即登录</string>
    <string name="payment_text">待付款</string>
    <string name="refund_text">退货</string>
    <string name="receive_text">待收货</string>
    <string name="evaluate_text">待评价</string>
    <string name="delivery_text">待发货</string>
    <string name="mine_view_all">查看全部</string>
    <string name="my_account_text">我的账户</string>
    <string name="amount_text">余额</string>
    <string name="voucher_text">代金券</string>
    <string name="integration_text">积分</string>
    <string name="my_activity_text">我的活动</string>
    <string name="invite_friend_text">邀请好友</string>
    <string name="gift_card_ex_text">礼品卡兑换</string>
    <string name="my_favorite_text">我的收藏</string>
    <string name="my_order_text">我的订单</string>
</resources>
