<?xml version="1.0" encoding="utf-8"?>
<com.a1000phone.n5thgroup.yueshijiagroup.view.ExpandableHeaderView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <ImageView android:id="@+id/expandableView"
                   android:layout_width="match_parent"
                   android:layout_height="230dp"
                   android:scaleType="centerCrop"
                   android:src="@drawable/ic_me_bg" android:tag="Header"/>

        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:layout_gravity="center_horizontal"
                      android:layout_marginTop="72.5dp"
                      android:gravity="center_horizontal"
                      android:orientation="vertical">
            <com.a1000phone.n5thgroup.yueshijiagroup.view.MultiTypeImageView
                android:layout_width="80dp" android:layout_height="80dp"
                android:src="@drawable/ic_not_logged" app:style="ROUND"/>

            <TextView android:id="@+id/logHintTV" android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="20dp" android:text="@string/not_logged_text"
                      android:textColor="#fff" android:textSize="15sp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="230dp"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:tag="Footer">

            <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
                         android:paddingBottom="15dp" android:paddingTop="20dp">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:text="我的订单" android:textColor="#000"/>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:layout_gravity="right"
                          android:drawablePadding="10dp"
                          android:drawableRight="@drawable/ic_right_arrow"
                          android:text="我的订单"
                          android:textColor="@color/colorMineAll" android:textSize="12sp"/>
            </FrameLayout>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="0.5dp"
                          android:background="@color/colorDivider"/>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:paddingBottom="15dp" android:paddingTop="20dp">

                <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                          android:layout_weight="1"
                          android:drawablePadding="10dp"
                          android:drawableTop="@drawable/ic_pending_payment"
                          android:gravity="center"
                          android:text="@string/payment_text"
                          android:textColor="@color/colorMineAll"
                          android:textSize="12sp"/>
                <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                          android:layout_weight="1"
                          android:drawablePadding="10dp"
                          android:drawableTop="@drawable/ic_pending_delivery"
                          android:gravity="center"
                          android:text="@string/delivery_text"
                          android:textColor="@color/colorMineAll"
                          android:textSize="12sp"/>
                <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                          android:layout_weight="1"
                          android:drawablePadding="10dp"
                          android:drawableTop="@drawable/ic_pending_receiving"
                          android:gravity="center"
                          android:text="@string/receive_text"
                          android:textColor="@color/colorMineAll"
                          android:textSize="12sp"/>
                <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                          android:layout_weight="1"
                          android:drawablePadding="10dp"
                          android:drawableTop="@drawable/ic_pending_evaluate"
                          android:gravity="center"
                          android:text="@string/evaluate_text"
                          android:textColor="@color/colorMineAll"
                          android:textSize="12sp"/>
                <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                          android:layout_weight="1"
                          android:drawablePadding="10dp"
                          android:drawableTop="@drawable/ic_refund"
                          android:gravity="center"
                          android:text="@string/refund_text"
                          android:textColor="@color/colorMineAll"
                          android:textSize="12sp"/>
            </LinearLayout>

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:paddingBottom="15dp" android:paddingTop="10dp" android:text="我的账户"
                      android:textColor="#000"/>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="0.5dp"
                          android:background="@color/colorDivider"/>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:paddingBottom="25dp"
                          android:paddingTop="30dp">

                <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                          android:layout_weight="1"
                          android:drawablePadding="20dp"
                          android:drawableTop="@drawable/null_shape"
                          android:gravity="center"
                          android:text="余额"
                          android:textColor="@color/colorMineAll"
                          android:textSize="12sp"/>

                <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                          android:layout_weight="1"
                          android:drawablePadding="20dp"
                          android:drawableTop="@drawable/null_shape"
                          android:gravity="center"
                          android:text="代金券"
                          android:textColor="@color/colorMineAll"
                          android:textSize="12sp"/>

                <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                          android:layout_weight="1"
                          android:drawablePadding="20dp"
                          android:drawableTop="@drawable/null_shape"
                          android:gravity="center"
                          android:text="积分"
                          android:textColor="@color/colorMineAll"
                          android:textSize="12sp"/>

            </LinearLayout>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="0.5dp"
                          android:background="@color/colorDivider"/>

            <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
                         android:paddingBottom="20dp" android:paddingTop="20dp">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:text="礼品卡兑换" android:textColor="#000"/>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:layout_gravity="right"
                          android:drawablePadding="10dp"
                          android:drawableRight="@drawable/ic_right_arrow"
                          android:textColor="@color/colorMineAll" android:textSize="12sp"/>
            </FrameLayout>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="0.5dp"
                          android:background="@color/colorDivider"/>
            <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
                         android:paddingBottom="20dp" android:paddingTop="20dp">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:text="我的收藏" android:textColor="#000"/>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:layout_gravity="right"
                          android:drawablePadding="10dp"
                          android:drawableRight="@drawable/ic_right_arrow"
                          android:textColor="@color/colorMineAll" android:textSize="12sp"/>
            </FrameLayout>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="0.5dp"
                          android:background="@color/colorDivider"/>
            <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
                         android:paddingBottom="20dp" android:paddingTop="20dp">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:text="我的活动" android:textColor="#000"/>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:layout_gravity="right"
                          android:drawablePadding="10dp"
                          android:drawableRight="@drawable/ic_right_arrow"
                          android:textColor="@color/colorMineAll" android:textSize="12sp"/>
            </FrameLayout>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="0.5dp"
                          android:background="@color/colorDivider"/>
            <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
                         android:paddingBottom="20dp" android:paddingTop="20dp">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:text="邀请好友" android:textColor="#000"/>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:layout_gravity="right"
                          android:drawablePadding="10dp"
                          android:drawableRight="@drawable/ic_right_arrow"
                          android:textColor="@color/colorMineAll" android:textSize="12sp"/>
            </FrameLayout>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="0.5dp"
                          android:background="@color/colorDivider"/>

            <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
                         android:paddingBottom="20dp" android:paddingTop="20dp">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:text="客服电话(9:00-18:00)" android:textColor="#000"/>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:layout_gravity="right"
                          android:text="4006-277-717"
                          android:textColor="#000" android:textSize="12sp"/>
            </FrameLayout>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="0.5dp"
                          android:background="@color/colorDivider"/>
        </LinearLayout>

    </FrameLayout>
</com.a1000phone.n5thgroup.yueshijiagroup.view.ExpandableHeaderView>